syntax = "proto3";

package thread_service;

import "agent_chain.proto";
import "google/protobuf/timestamp.proto";

service ProtoThreadService {
  rpc CreateThread(CreateThreadRequest) returns (CreateThreadResponse);
  rpc ListThreads(ListThreadsRequest) returns (ListThreadsResponse);
  rpc GetThread(GetThreadRequest) returns (GetThreadResponse);

  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc AddHiddenHumanMessage(AddHiddenHumanMessageRequest) returns (AddHiddenHumanMessageResponse);
  rpc AddHumanMessage(AddHumanMessageRequest) returns (AddHumanMessageResponse);
  rpc AddSystemMessage(AddSystemMessageRequest) returns (AddSystemMessageResponse);

  rpc ChatStream(ChatStreamRequest) returns (stream ChatStreamResponse);
  rpc GenerateThreadTitle(GenerateThreadTitleRequest) returns (GenerateThreadTitleResponse);
}

message CreateThreadRequest {
  string title = 1;
}

message Thread {
  string id = 1;
  string user_id = 2;
  string title = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateThreadResponse {
  Thread thread = 1;
}

message ListThreadsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message ListThreadsResponse {
  repeated Thread threads = 1;
}

message ChatStreamRequest {
  string thread_id = 1;
  string content = 2;
}

message ChatStreamResponse {
  string chunk = 1;
  bool is_final = 2;
}

message AddHumanMessageRequest {
  string thread_id = 1;
  agent_chain.ProtoHumanMessage message = 2;
}

message AddHumanMessageResponse {
  agent_chain.ProtoBaseMessage message = 1;
}

message AddHiddenHumanMessageRequest {
  string thread_id = 1;
  agent_chain.ProtoHumanMessage message = 2;
}

message AddHiddenHumanMessageResponse {
  agent_chain.ProtoBaseMessage message = 1;
}

message GetMessagesRequest {
  string thread_id = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}

message GetMessagesResponse {
  repeated agent_chain.ProtoBaseMessage messages = 1;
}

message GetThreadRequest {
  string thread_id = 1;
}

message GetThreadResponse {
  Thread thread = 1;
}

message AddSystemMessageRequest {
  string thread_id = 1;
  agent_chain.ProtoSystemMessage message = 2;
}

message AddSystemMessageResponse {
  agent_chain.ProtoBaseMessage message = 1;
}

message GenerateThreadTitleRequest {
  string thread_id = 1;
  string content = 2;
}

message GenerateThreadTitleResponse {
  Thread thread = 1;
}
